# Minerva

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  FIRST_SESSION.md  MVP_Readiness_Report.md  README.md  analysis_selector.py  assay  assay.bat  cli.py  data_intake.py  debug_gpu.py  debug_llm.py  demo_app.py  demo_mcp_session.py  docker-compose.yml  imputation_confidence.py  install.ps1  install.sh  integration.py  main.py  mcp.json  minerva  minerva.bat  ops_center.py  orchestrate_workflow.py  orchestrator.py  purchase_handler.py  pyproject.toml  pytest.ini  reproduce_chatbot_import.py  reproduce_issue.py  requirements.lock.txt  requirements.txt  run_chat.bat  test_workflow.py  verify_gpu.py  (+1 more)
.claude/: settings.local.json
Data_Intake/: datalake_ingestion.py
Integration/: data_integration.py  semantic_integration.py  semantic_merge.py  test_data_integration.py
Purchase_handler/: purchase_handler.py
User_Data/: demo_retail_sales.csv
adm/: __init__.py
agent_recipes/: README.md  __init__.py  anomaly_alert.py  reorder.py  role_review.py
agents/: __main__.py  action_agent.py  advocate.py  agents_config.yaml  base.py  cli.py  conductor.py  config.py  engineer.py  marketing.py  presentation.py  productizer.py  scheduler.py  sentinel.py  support.py  telemetry.py
archive/: .env
catalog/: fine_grained_tags.json  public_data_registry.db  public_data_sources.py  semantic_index.db  semantic_index.py  tag_catalog.json
categorization/: categorize.py
chatbot/: __init__.py  chatbot.py  decision.py  intent_parser.py  llm_intent_classifier.py
config/: .env.example  App_Dev_Modularize.code-workspace  __init__.py  api_presets.py  codex-requirements.txt  docker-compose.yml  ecr-policy.json  environment.codex.yml  environment.yml  feature_flags.py  llm_config.json  model_allowlist.py  pytest.ini  requirements.codex.txt  requirements.txt  semantic_roles.yaml
data/: bitcoin_history.csv
datasets/: census_zip_income.csv  conflict.json  holidays.csv  merge_df1.csv  merge_df2.csv  sample_dataset.json  store_master_template.csv  weather_sample.csv
descriptive/: __init__.py  stats.py
docs/: Agent_Workforce_Readiness.md  Architecture_Design_Guide.md  (+12 more)
(+330 files in other folders)
